rbd-mirror: keep local pointer to image journal

Fixes: http://tracker.ceph.com/issues/16230
Signed-off-by: Jason Dillaman <dillaman@redhat.com>